# MAT201B-2024-ryan-millett

./: .gitmodules  CMakeLists.txt  README.md  configure.sh  meshManyShape.cpp  run.bat  run.sh
archive/: p1.cpp  p3.cpp  p4.cpp  p5.cpp
archive/boids/classes/: boid.cpp  boid_3.cpp  boid_4.hpp
boids/: p1.cpp  p2.cpp  p3.cpp  p4.cpp  p5.cpp  p6.cpp  p7.cpp
boids/classes/: boid.cpp  boid_3.cpp  boid_4.cpp  boid_4.hpp
include/boids/: boid.hpp
include/utils/: octree.hpp
point/: octtree.cpp  particle.cpp  point-fragment.glsl
src/: main.cpp
utils/: octree.cpp  octree.hpp  octtree.cpp
